Tue Sep  8 09:53:46 1998  Jason L Tibbitts  <tibbs@morpheus.hpc.uh.edu>

	* lib/Majordomo.pm (connect): The post method doesn't need
 	validated addresses.

	* lib/Mj/Resend.pm (post): Make a new Addr object after extracting
 	the user from the headers.

Mon Sep  7 12:26:34 1998  Jason L Tibbitts  <tibbs@morpheus.hpc.uh.edu>

	* lib/Majordomo.pm (help_start): Untaint the topic.

	* lib/Mj/Format.pm (index): Show language in long output.

	* lib/Mj/FileSpace.pm (index): Return the language.

	* lib/Majordomo.pm (_get_mailfile): Don't send the full pathanme.

	* lib/Mj/Token.pm (consult): Include language when spooling.

	* lib/Mj/FileSpace.pm (put_start): Take $lang.

	* lib/Majordomo.pm (put_start): Take $lang.

	* lib/Mj/TextOutput.pm (put): Pass in the language.

	* lib/Mj/Inform.pm (_inform_owner): Forgot to add a
 	Content-Language header.

	* lib/Majordomo.pm (_get): Untaint the file name.

Sun Sep  6 11:49:17 1998  Jason L Tibbitts  <tibbs@morpheus.hpc.uh.edu>

	* lib/Mj/FileSpace.pm (put): Accept a language.

	* lib/Mj/Access.pm (_d_post): Fix typo.

	* lib/Mj/Inform.pm (_inform_owner): Deal with _list_file_get
 	changes.

Sat Sep  5 17:22:56 1998  Jason L Tibbitts  <tibbs@morpheus.hpc.uh.edu>

	* lib/Mj/Token.pm (confirm): Deal with _list_file_get changes.

	* lib/Mj/Access.pm (_a_replyfile): Deal with _list_file_get
 	changes.
	(_a_mailfile): Ditto.

	* lib/Majordomo.pm (_get): Deal with _list_file_get changes.
	(_request_response): Ditto.
	(_index): Deal with FileSpace return value changes.

	* lib/Mj/MailOut.pm (welcome): Deal with _list_file_get changes.

	* lib/Mj/FileSpace.pm (get): Return a hash of data instead of
 	individual data elements.

Fri Sep  4 23:36:01 1998  Jason L Tibbitts  <tibbs@morpheus.hpc.uh.edu>

	* t/shell.t: Adjust to new lists-tiny output.

	* lib/Mj/Format.pm (lists): Take into account categories; change
 	tiny output slightly to remove leading spaces.  (Better for shell
 	scripts that way.)
