@@ -1,5 +1,14 @@
 Tue Sep  8 09:53:46 1998  Jason L Tibbitts  <tibbs@morpheus.hpc.uh.edu>
 
+	* lib/Majordomo.pm (_request_response): Fix $desc booboo.
+	(substitute_vars_string): Match at end of string as well as on
+ 	word boundary.
+
+	* bin/mj_email (connect_and_parse): We can't call addr_validate
+ 	because it no longer exists.  Don't bother trying to validate the
+ 	address; if it is invalid, the core will scream and the end result
+ 	will be the same.
+
 	* lib/Majordomo.pm (connect): The post method doesn't need
  	validated addresses.
 
